--- a/index.html
+++ b/index.html
@@ -127,41 +127,6 @@
 
   <!--  header-section start  -->
   <header class="header-section transparent--header header--fixed">
-    <div class="header-top">
-      <div class="container">
-        <div class="row justify-content-between">
-          <div class="col-lg-6 col-md-6">
-            <div class="header-top-left d-flex">
-              <div class="support-part">
-                  <a href="tel:+88016558888454"><i class="fa fa-headphones"></i>Support</a>
-              </div>
-              <div class="email-part">
-                  <a href="mailto:info@behoof.com"><i class="fa fa-envelope"></i>info@behoof.com</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-4">
-              <div class="header-top-right d-flex align-items-center justify-content-end">
-                  <div class="language-part">
-                    <i class="fa fa-globe"></i>
-                    <select>
-                        <option>Eng</option>
-                        <option>Ban</option>
-                        <option>Rus</option>
-                        <option>Arb</option>
-                    </select>
-                  </div>
-                  <div class="header-cart-count">
-                    <a href="checkout.html">
-                      <i class="fa fa-shopping-cart"></i>
-                      <span>My cart (0)</span>
-                    </a>
-                  </div>
-              </div>
-          </div>
-        </div>
-      </div>
-    </div>
     <div class="header-bottom">
       <div class="container">
         <nav class="navbar navbar-expand-xl">
@@ -228,9 +193,9 @@
         <div class="col-lg-8">
           <div class="banner-content-area">
             <div class="banner-content">
-              <span class="banner-sub-title">EASY WAY TO Make Profit</span>
-              <h2 class="banner-title text-white" >Many Ways, One Solution</h2>
-              <p class="text-white">Use the opportunities of new technologies, without active intervention,create passive income that will ensure your future.</p>
+              <span class="banner-sub-title">EASY WAY TO Analysis Your Business</span>
+              <h2 class="banner-title text-white" >#1 Solution for all Analytic Master</h2>
+              <p class="text-white">Use the opportunities to Analysis your business with ANALYTIC MASTER</p>
             </div>
             <div class="banner-btn-area">
               <a href="#0" class="btn btn-info btn-round">get started now!</a>
@@ -299,8 +264,8 @@
         <div class="col-lg-8">
           <div class="section-header text-center">
             <span class="section-subtitle">Our Amazing Features</span>
-            <h2 class="section-title">Investing For Everyone</h2>
-            <p>We are worldwide investment company who are committed to the principle of revenue maximization and reduction of the financial risks at investing.</p>
+            <h2 class="section-title">Analytics For Everyone</h2>
+            <p>We are committed to the principle of Analytis maximization Know insight website every steps</p>
           </div>
         </div>
       </div>
@@ -1641,17 +1606,8 @@
     <div class="footer-bottom">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-lg-6">
-            <p class="copy-right-text">Copyright © 2020.All Rights Reserved By <a href="home-one.html">Behoof</a></p>
-          </div>
-          <div class="col-lg-6">
-            <div class="card-list text-right">
-              <a href="#0"><img src="assets/images/icons/card-options/americanexpress.png" alt="image"></a>
-              <a href="#0"><img src="assets/images/icons/card-options/maestro.png" alt="image"></a>
-              <a href="#0"><img src="assets/images/icons/card-options/visa.png" alt="image"></a>
-              <a href="#0"><img src="assets/images/icons/card-options/paypal.png" alt="image"></a>
-              <a href="#0"><img src="assets/images/icons/card-options/mastercard.png" alt="image"></a>
-            </div>
+          <div class="col-lg-12">
+            <p class="copy-right-text">Copyright © 2020.All Rights Reserved By <a href="http://analytic-master.com/">Analytic Master</a></p>
           </div>
         </div>
       </div>
