--- a/index.html
+++ b/index.html
@@ -136,41 +136,14 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav main-menu ml-auto">
-              <li class="active menu_has_children"><a href="#0">Home</a>
-              <ul class="sub-menu">
-                  <li><a href="home-one.html">Home One</a></li>
-                  <li><a href="home-two.html">Home Two</a></li>
-                  <li><a href="home-three.html">Home Three</a></li>
-                  <li><a href="home-four.html">Home Four</a></li>
-                  <li><a href="home-five.html">Home Five</a></li>
-              </ul>
+              <li class="active"><a href="http://analytic-master.com/">Home</a>
               </li>
-              <li><a href="about.html">about</a></li>
-              <li class="menu_has_children"><a href="#0">Investment</a>
+              <li class="menu_has_children"><a href="#0">Products</a>
                 <ul class="sub-menu">
-                    <li><a href="investment.html">Investment One</a></li>
-                    <li><a href="investment-two.html">Investment Two</a></li>
-                    <li><a href="investment-single.html">Investment Single</a></li>
+                    <li><a href="investment.html">Google analytics</a></li>
                 </ul>
               </li>
-              <li class="menu_has_children"><a href="#0">Pages</a>
-                <ul class="sub-menu">
-                    <li><a href="affiliate.html">Affiliate</a></li>
-                    <li><a href="checkout.html">Checkout</a></li>
-                    <li><a href="contest.html">Contest</a></li>
-                    <li><a href="error-404.html">404 page</a></li>
-                    <li><a href="help.html">Help Page</a></li>
-                    <li><a href="how-work.html">How Work</a></li>
-                    <li><a href="promotion.html">Promotion</a></li>
-                    <li><a href="security.html">Security</a></li>
-                </ul>
-              </li>
-              <li class="menu_has_children"><a href="#0">blog</a>
-                <ul class="sub-menu">
-                    <li><a href="blog-grid.html">Blog Grid</a></li>
-                    <li><a href="blog-list.html">Blog List</a></li>
-                    <li><a href="blog-single.html">Blog Single</a></li>
-                </ul>
+              <li><a href="#0">blog</a>
               </li>
               <li><a href="contact.html">contact us</a></li>
           </ul>
@@ -198,7 +171,7 @@
               <p class="text-white">Use the opportunities to Analysis your business with ANALYTIC MASTER</p>
             </div>
             <div class="banner-btn-area">
-              <a href="#0" class="btn btn-info btn-round">get started now!</a>
+              <a href="#0" class="btn btn-info btn-round">get plugin now!</a>
               <a href="#0" class="video-btn video-btn--info">
                 <span class="icon"><i class="icofont-ui-play"></i></span>
               </a>
@@ -234,7 +207,7 @@
               <img src="assets/images/icons/features/1.svg" alt="image">
             </div>
             <div class="content">
-              <h3 class="title">Simple</h3>
+              <h3 class="title">Google Analytics Dashboard</h3>
               <a href="#0" class="read-more-btn">read more<i class="fa fa-long-arrow-right"></i></a>
             </div>
           </div>
@@ -245,7 +218,7 @@
               <img src="assets/images/icons/features/2.svg" alt="image">
             </div>
             <div class="content">
-              <h3 class="title">transparent</h3>
+              <h3 class="title">Real-time Stats</h3>
               <a href="#0" class="read-more-btn">read more<i class="fa fa-long-arrow-right"></i></a>
             </div>
           </div>
@@ -256,7 +229,7 @@
               <img src="assets/images/icons/features/3.svg" alt="image">
             </div>
             <div class="content">
-              <h3 class="title">security</h3>
+              <h3 class="title">Ecommerce Tracking</h3>
               <a href="#0" class="read-more-btn">read more<i class="fa fa-long-arrow-right"></i></a>
             </div>
           </div>
@@ -267,7 +240,7 @@
               <img src="assets/images/icons/features/5.svg" alt="image">
             </div>
             <div class="content">
-              <h3 class="title">compliant</h3>
+              <h3 class="title">Performance</h3>
               <a href="#0" class="read-more-btn">read more<i class="fa fa-long-arrow-right"></i></a>
             </div>
           </div>
@@ -278,7 +251,7 @@
               <img src="assets/images/icons/features/4.svg" alt="image">
             </div>
             <div class="content">
-              <h3 class="title">efficient</h3>
+              <h3 class="title">Universal Tracking</h3>
               <a href="#0" class="read-more-btn">read more<i class="fa fa-long-arrow-right"></i></a>
             </div>
           </div>
@@ -430,7 +403,7 @@
         <div class="col-lg-6 mt-lg-0 mt-5">
           <div class="offer-wrapper-content">
             <span class="subtitle">Our mission is to help our User</span>
-            <h2 class="title">To Maximize Money</h2>
+            <h2 class="title">Google Analytics Master</h2>
             <p>Whether you're new to investing or a seasoned pro, Behoof does what is right for you and your money. On average, our investing principles can increase returns by 15% when compared to the typical investor.</p>
             <p>We believe that the future of finance looks very different to how it looks today and we offer qualifying investors the opportunity to invest in the companies and products that are building the future of finance.</p>
             <a href="#0" class="btn btn-primary btn-hover">what we offer</a>
@@ -462,108 +435,7 @@
   <!-- affiliate-features-section end -->
 
   <!-- testimonial-section start -->
-  <section class="testimonial-section pb-120">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-10">
-          <div class="section-header text-center">
-            <span class="section-subtitle">Testimonials</span>
-            <h2 class="section-title">Over 7,000 Happy Customers</h2>
-            <p>We have many happy investors invest with us .Some impresions from our Customers!  PLease read some of the lovely things our Customers say about us.</p>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="testimonial-wrapper d-lg-block d-none style--two">
-            <div class="map-img"><img src="assets/images/elements/testimonial-map.png" alt="image"></div>
-            <div class="testimonial-single">
-              <div class="thumb">
-                <img src="assets/images/testimonial/1.png" alt="image">
-              </div>
-              <div class="details text-center">
-                <p>Great service! I have been worried about investing. But when I came here. I don't have to worry anymore</p>
-                <h4 class="name">Joy Kelley</h4>
-                <span class="client-details">United kingdom, 28th April,2019</span>
-                <span class="arrow-wrap"><span class="arrow"></span></span>
-              </div>
-            </div><!-- testimonial-single end -->
-            <div class="testimonial-single">
-              <div class="thumb">
-                <img src="assets/images/testimonial/2.png" alt="image">
-              </div>
-              <div class="details text-center">
-                <p>Great service! I have been worried about investing. But when I came here. I don't have to worry anymore</p>
-                <h4 class="name">Joy Kelley</h4>
-                <span class="client-details">United kingdom, 28th April,2019</span>
-                <span class="arrow-wrap"><span class="arrow"></span></span>
-              </div>
-            </div><!-- testimonial-single end -->
-            <div class="testimonial-single">
-              <div class="thumb">
-                <img src="assets/images/testimonial/3.png" alt="image">
-              </div>
-              <div class="details text-center">
-                <p>Great service! I have been worried about investing. But when I came here. I don't have to worry anymore</p>
-                <h4 class="name">Joy Kelley</h4>
-                <span class="client-details">United kingdom, 28th April,2019</span>
-                <span class="arrow-wrap"><span class="arrow"></span></span>
-              </div>
-            </div><!-- testimonial-single end -->
-            <div class="testimonial-single">
-              <div class="thumb">
-                <img src="assets/images/testimonial/4.png" alt="image">
-              </div>
-              <div class="details text-center">
-                <p>Great service! I have been worried about investing. But when I came here. I don't have to worry anymore</p>
-                <h4 class="name">Joy Kelley</h4>
-                <span class="client-details">United kingdom, 28th April,2019</span>
-                <span class="arrow-wrap"><span class="arrow"></span></span>
-              </div>
-            </div><!-- testimonial-single end -->
-            <div class="testimonial-single">
-              <div class="thumb">
-                <img src="assets/images/testimonial/5.png" alt="image">
-              </div>
-              <div class="details text-center">
-                <p>Great service! I have been worried about investing. But when I came here. I don't have to worry anymore</p>
-                <h4 class="name">Joy Kelley</h4>
-                <span class="client-details">United kingdom, 28th April,2019</span>
-                <span class="arrow-wrap"><span class="arrow"></span></span>
-              </div>
-            </div><!-- testimonial-single end -->
-            <div class="testimonial-single">
-              <div class="thumb">
-                <img src="assets/images/testimonial/6.png" alt="image">
-              </div>
-              <div class="details text-center">
-                <p>Great service! I have been worried about investing. But when I came here. I don't have to worry anymore</p>
-                <h4 class="name">Joy Kelley</h4>
-                <span class="client-details">United kingdom, 28th April,2019</span>
-                <span class="arrow-wrap"><span class="arrow"></span></span>
-              </div>
-            </div><!-- testimonial-single end -->
-          </div>
-          <div class="testmonial-slider-wrapper d-lg-none mb-4">
-            <div class="testimonial-slider owl-carousel">
-              <div class="testimonial-single-two">
-                <div class="thumb"><img src="assets/images/testimonial/2.png" alt="image"></div>
-                <h4 class="name">Kevin Ohashi</h4>
-                <span class="designation">Award winning blogger</span>
-                <p>behoof has one of the friendliest affiliate programs.They’re definitely one of the bestinvestment website in the world. I’ve been using them for a long time and have never had any problems</p>
-              </div><!-- testimonial-single-two end -->
-              <div class="testimonial-single-two">
-                <div class="thumb"><img src="assets/images/testimonial/3.png" alt="image"></div>
-                <h4 class="name">Kevin Ohashi</h4>
-                <span class="designation">Award winning blogger</span>
-                <p>behoof has one of the friendliest affiliate programs.They’re definitely one of the bestinvestment website in the world. I’ve been using them for a long time and have never had any problems</p>
-              </div><!-- testimonial-single-two end -->
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+
   <!-- testimonial-section end -->
 
   <!-- investors-section start -->
@@ -646,14 +518,6 @@
               </ul>
             </div>
           </div><!-- footer-widget end -->
-        </div>
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="btn-area text-center">
-              <a href="#0" class="wow zoomIn" data-wow-duration="0.3s" data-wow-delay="0.5s"><img src="assets/images/buttons/google.png" alt="button"></a>
-              <a href="#0" class="wow zoomIn" data-wow-duration="0.7s" data-wow-delay="0.5s"><img src="assets/images/buttons/apple.png" alt="button"></a>
-            </div>
-          </div>
         </div>
       </div>
     </div>
