--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                 <img src="assets/images/choose-us/1.png" alt="image">
               </div>
               <div class="choose-content">
-                <h3 class="title">Fast Profit </h3>
+                <h3 class="title">Few Minutes to Install </h3>
                 <p>We're talking about ways you can make money fast.Invest money and get reward, bonus and profit</p>
                 <a href="#0" class="read-more-btn">read more<i class="fa fa-long-arrow-right"></i></a>
               </div>
@@ -299,7 +299,7 @@
                 <img src="assets/images/choose-us/2.png" alt="image">
               </div>
               <div class="choose-content">
-                <h3 class="title">Instant Withdraw</h3>
+                <h3 class="title">Know Your Website Visitors in New Way</h3>
                 <p>We’re extremely excited to launch instant withdrawals.you can deposit and withdraw funds in just a few clicks.</p>
                 <a href="#0" class="read-more-btn">read more<i class="fa fa-long-arrow-right"></i></a>
               </div>
@@ -309,7 +309,7 @@
                 <img src="assets/images/choose-us/3.png" alt="image">
               </div>
               <div class="choose-content">
-                <h3 class="title">Dedicated Server</h3>
+                <h3 class="title">How People find your website</h3>
                 <p>Dedicated server hosting with 100% guaranteed network uptime.There's no sharing of CPU time, RAM or bandwidth</p>
                 <a href="#0" class="read-more-btn">read more<i class="fa fa-long-arrow-right"></i></a>
               </div>
@@ -319,7 +319,7 @@
                 <img src="assets/images/choose-us/4.png" alt="image">
               </div>
               <div class="choose-content">
-                <h3 class="title">DDoS Protection</h3>
+                <h3 class="title">One Dashboard all analysis</h3>
                 <p>To protect your resources from modern DDoS attacks is through a multi-layer deployment of purpose-built DDoS mitigation </p>
                 <a href="#0" class="read-more-btn">read more<i class="fa fa-long-arrow-right"></i></a>
               </div>
@@ -329,7 +329,7 @@
                 <img src="assets/images/choose-us/5.png" alt="image">
               </div>
               <div class="choose-content">
-                <h3 class="title">24/7 Support</h3>
+                <h3 class="title">Content Base analysis</h3>
                 <p>Our Technical Support team is available for any questions.Our  multilingual 24/7 support allows to keep in touch.</p>
                 <a href="#0" class="read-more-btn">read more<i class="fa fa-long-arrow-right"></i></a>
               </div>
@@ -339,7 +339,7 @@
                 <img src="assets/images/choose-us/1.png" alt="image">
               </div>
               <div class="choose-content">
-                <h3 class="title">Fast Profit </h3>
+                <h3 class="title">Quick know about website status </h3>
                 <p>We're talking about ways you can make money fast.Invest money and get reward, bonus and profit</p>
                 <a href="#0" class="read-more-btn">read more<i class="fa fa-long-arrow-right"></i></a>
               </div>
@@ -365,10 +365,10 @@
             <div class="col-lg-8">
               <div class="offer-item">
                 <div class="icon">
-                  <img src="assets/images/icons/offer/1.svg" alt="icon">
+                  <img src="assets/images/icons/offer/2.svg" alt="icon">
                 </div>
                 <div class="content">
-                  <h3 class="title">smart deposit</h3>
+                  <h3 class="title">One Click Install</h3>
                   <p>Best way t o put your idle money to work.</p>
                   <a href="#0" class="read-more-btn">read more<i class="icofont-long-arrow-right"></i></a>
                 </div>
@@ -377,10 +377,10 @@
             <div class="col-lg-8 offset-lg-2">
               <div class="offer-item">
                 <div class="icon">
-                  <img src="assets/images/icons/offer/2.svg" alt="icon">
+                  <img src="assets/images/icons/offer/3.svg" alt="icon">
                 </div>
                 <div class="content">
-                  <h3 class="title">One - Tap Invest</h3>
+                  <h3 class="title">Analysis</h3>
                   <p>Invest without net baning/debit card.</p>
                   <a href="#0" class="read-more-btn">read more<i class="icofont-long-arrow-right"></i></a>
                 </div>
@@ -392,7 +392,7 @@
                   <img src="assets/images/icons/offer/3.svg" alt="icon">
                 </div>
                 <div class="content">
-                  <h3 class="title">invest & saving</h3>
+                  <h3 class="title">Report</h3>
                   <p>Grow your saving by investing as little as $5</p>
                   <a href="#0" class="read-more-btn">read more<i class="icofont-long-arrow-right"></i></a>
                 </div>
