--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               <li><a href="contact.html">contact us</a></li>
           </ul>
             <div class="header-join-part">
-              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#signInModal">Get Plugin</button>
+              <button class="btn btn-primary"><a type="button" >Get Plugin</a></button>
             </div>
           </div>
         </nav>
